--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -404,7 +404,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 .timeline li .line-title {
   font-size: 16px;
-  line-height: 6px;
+  line-height: auto;
 }
 
 .timeline li span {
